# uavcamel

./: CMakeLists.txt  README.md  package.xml
3rdPartLib/: install3rdPartLib.sh  install_OOQP.sh
3rdPartLib/MA27/: Makefile  config.status
3rdPartLib/MA27/autom4te.cache/: output.0  requests  traces.0
3rdPartLib/MA27/example/: Makefile
3rdPartLib/MA27/src/: Makefile
3rdPartLib/QuadProgpp/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
3rdPartLib/QuadProgpp/src/: Makefile  cmake_install.cmake  main  main.cc
launch/: ooqp.launch  px4_sitl.launch  vicon_room.launch
src/: OOQP.cpp  OOQP_1005.cpp  OOQP_1214.cpp  OOQP_1215.cpp  OOQP__.cpp  camel.cpp  trj_fj005.cpp  trj_fj005_1002.cpp  trj_fj005_1003.cpp  trj_fj005_1213.cpp
src/utils/: common.h  eigen_typedef.h  trajectories.hpp  uav_mission.hpp
src/utils/Missions/: .~lock.square.csv#  AMsquare.csv  Mission.csv  square.csv
